--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,16 +2,13 @@ name: A workflow for my Hello World file
 on: push
 jobs:
   build:
-    name: Hello world action
+    name: Hello world actions
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
       - uses: ./action-a
         with:
           MY_NAME: "Mona"
-    name: check_eol
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v1
+
       - uses: ./action-b
 
