add custom path

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,4 +11,6 @@ jobs:
           MY_NAME: "Mona"
 
       - uses: ./action-b
+        with: # omit this mapping to use default path
+          path: ../..
 
