--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,5 +12,5 @@ jobs:
 
       - uses: ./action-b
         with: # omit this mapping to use default path
-          path: ../../hello-github-actions
+          path: ../
 
