--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,11 +6,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
-      - uses: ./action-a
-        with:
-          MY_NAME: "Mona"
+      #- uses: ./action-a
+       # with:
+        #  MY_NAME: "Mona"
 
       - uses: ./action-b
-        with: # omit this mapping to use default path
-          path: ../
+        #with: # omit this mapping to use default path
+         # path: ../
 
